:sparkles: 1、补充docker搭建说明 :art: 2、其他修改